# TENSOR-COMPILER-MLIR

./: .gitignore  CMakeLists.txt  README.md
include/: bin_reader.h  parser.h
mlir/include/: mlir_gen.h
mlir/src/: mlir_gen.cpp  test_mlir.cpp
src/: main.cpp  parser.cpp
tests/: complex_net.onnx  custom_net.onnx  reference.txt  simple_matmul.onnx
